<resources>
    <string name="app_name">My Application</string>
    <string name="enter_name">enter name</string>
    <string name="welcome_to_divy">welcome to divy</string>
    <string name="button">Button</string>
    <string name="enter_your_name">enter your name</string>
    <string name="enter_your_password">enter your password</string>
    <string name="remember_me">remember me</string>
    <string name="log_in">log in</string>
    <string name="welcome_back">welcome back</string>
    <string name="welcome_to_divy_s_channel">welcome to DIVY\'s channel</string>
</resources>